# bluesky_semantic_search

./: .gitignore  README.md
firehose_ingest/: Cargo.toml  README.md
firehose_ingest/src/: main.rs  post_buffer.rs  post_handler.rs  sample.json
firehose_ingest/src/schemas/: embedding_schema.rs  mod.rs  post_schema.rs
query/: Cargo.toml  README.md
query/src/: main.rs
