[package]
name = "firehose_ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "56.2.0"
parquet = "56.2.0"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
lru = "0.16.2"
sentence-transformers-rs = { git = "https://github.com/jwnz/sentence-transformers-rs", version = "0.1.0", features = ["metal"] }
candle-core = "0.9.1"
tokio = { version = "1.48.0", features = ["full"] }
