[package]
name = "query"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "56.2.0", features = ["chrono-tz"] }
parquet = "56.2.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
glob = "0.3.3"
lance = "0.38.2"
tokio = { version = "1.48.0", features = ["full"] }
sentence-transformers-rs = { git = "https://github.com/jwnz/sentence-transformers-rs", version = "0.1.0", features = ["metal"] }
candle-core = "0.9.1"
lance-index = "0.38.2"
lance-linalg = "0.38.2"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
env_logger = "0.11.8"
datafusion = "50.2.0"
